; ModuleID = '/home/carl/AnghaBench/linux/arch/arm/mm/extr_dma-mapping-nommu.c___dma_page_cpu_to_dev.c'
source_filename = "/home/carl/AnghaBench/linux/arch/arm/mm/extr_dma-mapping-nommu.c___dma_page_cpu_to_dev.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DMA_FROM_DEVICE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64, i64, i32)* @__dma_page_cpu_to_dev to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__dma_page_cpu_to_dev(i64 %0, i64 %1, i32 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  store i64 %0, i64* %4, align 8
  store i64 %1, i64* %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i64, i64* %4, align 8
  %8 = call i32 @__va(i64 %7)
  %9 = load i64, i64* %5, align 8
  %10 = load i32, i32* %6, align 4
  %11 = call i32 @dmac_map_area(i32 %8, i64 %9, i32 %10)
  %12 = load i32, i32* %6, align 4
  %13 = load i32, i32* @DMA_FROM_DEVICE, align 4
  %14 = icmp eq i32 %12, %13
  br i1 %14, label %15, label %21

15:                                               ; preds = %3
  %16 = load i64, i64* %4, align 8
  %17 = load i64, i64* %4, align 8
  %18 = load i64, i64* %5, align 8
  %19 = add i64 %17, %18
  %20 = call i32 @outer_inv_range(i64 %16, i64 %19)
  br label %27

21:                                               ; preds = %3
  %22 = load i64, i64* %4, align 8
  %23 = load i64, i64* %4, align 8
  %24 = load i64, i64* %5, align 8
  %25 = add i64 %23, %24
  %26 = call i32 @outer_clean_range(i64 %22, i64 %25)
  br label %27

27:                                               ; preds = %21, %15
  ret void
}

declare dso_local i32 @dmac_map_area(i32, i64, i32) #1

declare dso_local i32 @__va(i64) #1

declare dso_local i32 @outer_inv_range(i64, i64) #1

declare dso_local i32 @outer_clean_range(i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
